<resources>
    <string name="app_name">Chudnij dziku!</string>
    <string name="goJourneyButton">Zacznij swoją podróż</string>
    <string name="countButton">Policz się</string>
    <string name="intervalsButton">Interwały</string>
    <string name="ateKcal">Dzisiaj zjadłeś: 0 Kcal</string>
    <string name="burnkcal">i spaliłeś: 0 Kcal</string>
    <string name="randomFact">Here will be random health and fitness facts</string>
    <string name="roundTimeTextView"></string>
    <string name="breakTimeTextView"></string>
    <string name="IntervalInfoTextView">Dziku, ile rund chcesz zrobić:</string>
    <string name="roundsNumberTextView"></string>
    <string name="sumIntervalsTimeTextView">Twój trening będzie trwał:</string>
    <string name="confirmIntervalsPropertiesButton">Zatwierdź!</string>
    <string name="sumIntervalTimeTextView">... minut i ... sekund</string>
    <string name="roundTimeAskTextView">Jak długie mają być te rundy:</string>
    <string name="breakTimeAskTextView">a ile odpoczynku, ryjku:</string>
    <string name="startButton">Jedziemy!</string>
    <string name="roundBreakTextView">ćwiczenia/przerwa</string>
    <string name="currentRoundTextView">Runda nr: 0</string>
    <string name="currentBreakTextView">Czas przerwy: 0</string>
    <string name="currentIntervalTextView">Czas aktywności: 0</string>
    <string name="textToRead">text</string>
    <string name="continueButton">Idź dalej</string>
    <string name="bodyWeight"></string>
    <string name="askForGrowth">Ile masz wzrostu (w centymetrach):</string>
    <string name="growth"></string>
    <string name="askForAge">na koniec, ile masz lat:</string>
    <string name="ageEditText"></string>
</resources>